--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon /Users/xiziqiao/Documents/Meditation-app/src/app.js",
+    "devStart": "nodemon src/app.js",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch"
   },
