--- a/package.json
+++ b/package.json
@@ -49,6 +49,12 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.0",
-    "nodemon": "^3.1.7"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "sqlite3": "^5.1.7",
+    "supertest": "^7.0.0"
   }
 }
