--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,8 +1,11 @@
 name: Build and Push Docker Image
 
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["Test Suite"]
+    types:
+      - completed
+    branches: [main]
 
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }} 
@@ -11,6 +14,8 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -20,6 +25,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }} 
+          
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
