--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
   workflow_run:
-    workflows: ["Test Suite", "Build and Push Docker Image"]
+    workflows: ["Build and Push Docker Image"]
     types:
       - completed
     branches: [main]
