--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
+    env:
+      KUBECONFIG: ${{ github.workspace }}/kubeconfig
     
     steps:
       # Step 1: Check out your code
