add aws credentials

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to EC2
+name: Deploy to EKS
 
 on:
   workflow_run:
@@ -12,24 +12,28 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
-    env:
-      KUBECONFIG: ${{ github.workspace }}/kubeconfig
-    
     steps:
-      # Step 1: Check out your code
       - uses: actions/checkout@v3
 
-      # Step 2: Set up the kubeconfig from your secret
+      # Step 1: Provide AWS credentials so 'aws eks get-token' can work.
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      # Step 2: Write out your kubeconfig file
       - name: Set up kubeconfig
         run: |
           echo "${{ secrets.KUBECONFIG_CONTENT }}" > kubeconfig
           chmod 600 kubeconfig
           export KUBECONFIG=$PWD/kubeconfig
 
-      # Step 3: Verify cluster access (optional but recommended)
-      # This step checks if kubectl can reach your cluster
+      # Step 3: Verify cluster connection
       - name: Verify cluster connection
-        run: kubectl --kubeconfig ./kubeconfig get pods -A
+        run: |
+          kubectl get pods -A
 
       # Step 4: Deploy to Kubernetes
       - name: Deploy to Kubernetes
