--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           context: .
           push: true
+          no-cache: true 
           platforms: linux/amd64
           tags: |
             ${{ env.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}:latest
